--- a/res/layout/activity_first.xml
+++ b/res/layout/activity_first.xml
@@ -1,4 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+
+<RelativeLayout 
+    
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -13,5 +17,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/hello_seneca" />
+    
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/click_me" />
 
 </RelativeLayout>
