--- a/res/layout/activity_first.xml
+++ b/res/layout/activity_first.xml
@@ -11,7 +11,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".FirstActivity" 
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/red">
 
     <TextView
         android:layout_width="fill_parent"
